<resources>
    <string name="app_first_name">Yum</string>
    <string name="app_second_name">plan</string>
    <string name="app_name">YumPlan</string>
    <string name="welcome_back">Welcome back</string>
    <string name="quote">\"Anyone can cook, but only the fearless can be great.\"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="emil_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="forget_password">Forget password ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_chef">New chef ?</string>
    <string name="or_continue_with">or continue with</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get Started</string>
    <string name="register_quote">Plan your meals and have new answers for your traditional daily question</string>
    <string name="full_name">Full Name</string>
    <string name="name_hint">Enter your name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember">Remembered your account</string>
    <string name="forget_qote">Don\'t worry! It happens to the best of us. Please enter the email address associated with your account to receive a reset link.</string>
    <string name="chef_name">Chef %1$s</string>
    <string name="homeqoute">\"Keep your station clear!\"</string>
    <string name="chef_s_special_of_the_day">Chef\'s Special of the Day</string>
    <string name="view_recipe">VIEW RECIPE</string>
    <string name="bleskiver">Æbleskiver</string>
    <string name="classic_beef_tacos">Classic Beef Tacos</string>
    <string name="mealIngredients">Ingredients</string>
    <string name="_12_items">12 items</string>
    <string name="search_here">Search here ..</string>
    <string name="search_for_recipes_or_ingredients">Search for recipes or mealIngredients...</string>
    <string name="default_web_client_id">71435642273-apoc5jaddg4aklp38ebeu4arr34pjiit.apps.googleusercontent.com</string>
    <string name="logout">Logout</string>
    <string name="plan_meal">Plan meal</string>
    <string name="login">Login</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="error">error</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="meals">Meals</string>
    <string name="category">Category</string>
    <string name="ingredient">Ingredient</string>
    <string name="country">Country</string>
    <string name="save">Save</string>
    <string name="chef_s_calender">Chef\'s plan</string>
    <string name="remove">Remove</string>
    <string name="available_offline">Available offline</string>
    <string name="there_is_no_data">There is no data</string>
    <string name="canel">Canel</string>
    <string name="classic_ratatouille">Classic Ratatouille</string>
    <string name="some_recommended_desserts">Recommended Desserts</string>
    <string name="chef_s_fav">Chef\'s fav</string>

</resources>