<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.Auth.view.forgetpassword.ForgetPasswordPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <com.google.android.material.card.MaterialCardView

            android:id="@+id/materialCardView"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="56dp"
            app:cardBackgroundColor="#fef2e9"

            app:cardCornerRadius="60dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:padding="12dp"
                android:src="@drawable/outline_lock_reset_24" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/latoregular"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:paddingStart="25dp"

            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

        <TextView
            android:id="@+id/quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/latoregular"
            android:gravity="start"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:text="@string/forget_qote"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView


            android:id="@+id/forgetEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/latoregular"
            android:text="@string/email"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.112"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailForgetLayout"
            style="@style/TextInputLayoutOutlined"
            android:focusable="true"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:hintEnabled="false"
            app:boxStrokeColor="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgetEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInputFroget"
                android:hint="@string/emil_hint"
                style="@style/TextInputEditText" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/restoreAccountBtn"
            style="@style/BtnStyle"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="48dp"

            android:text="Send Code"
            app:backgroundTint="@color/dark_orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailForgetLayout"
            app:layout_constraintVertical_bias="0.245" />

        <LinearLayout

            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restoreAccountBtn">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/latoregular"
                android:gravity="center"
                android:text="@string/remember"
                android:textColor="@color/slogan_colour"
                android:textSize="15sp" />

            <Button
                android:id="@+id/toLoginBtnfromForget"
                style="@style/TextBtn"
                android:textAlignment="textStart"
                android:layout_marginEnd="10dp"
                android:text="Login"
                android:textSize="15sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>